// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tests for <AlertCall /> should match SnapShot 1`] = `
<div
  className="md-alert md-alert--call"
>
  <div
    className="md-alert__title"
  >
    Incoming call
  </div>
  <div
    className="md-alert__caller"
  >
    <Avatar
      alt="Jefe Guadelupe"
      backgroundColor=""
      buttonClassName=""
      className={null}
      color=""
      failureBadge={false}
      hasNotification={false}
      hideDefaultTooltip={false}
      icon={null}
      initials={null}
      isDecrypting={false}
      isOverview={false}
      onClick={null}
      size="xlarge"
      src={null}
      theme={null}
      title="Jefe Guadelupe"
      type=""
    />
    <div
      className="md-alert__caller-title"
    >
      Jefe Guadelupe
    </div>
    <div
      className="md-alert__caller-subtitle"
    >
      +1 408-555-1212
    </div>
  </div>
  <Component />
  <div
    className="md-alert--call--buttons"
  >
    <ContextTransform(Button)
      ariaLabel="reject call"
      circle={true}
      color="red"
      onClick={null}
      size={44}
    >
      <Icon
        append={false}
        ariaLabel={null}
        buttonClassName=""
        buttonProps={null}
        className=""
        color=""
        description=""
        name="cancel_24"
        onClick={null}
        prepend={false}
        size={null}
        sizeOverride={false}
        style={null}
        title=""
        type=""
      />
    </ContextTransform(Button)>
  </div>
</div>
`;

exports[`tests for <AlertCall /> should match SnapShot with devices 1`] = `
<div
  className="md-alert md-alert--call"
>
  <div
    className="md-alert__title"
  >
    Incoming call
  </div>
  <div
    className="md-alert__caller"
  >
    <Avatar
      alt="Jefe Guadelupe"
      backgroundColor=""
      buttonClassName=""
      className={null}
      color=""
      failureBadge={false}
      hasNotification={false}
      hideDefaultTooltip={false}
      icon={null}
      initials={null}
      isDecrypting={false}
      isOverview={false}
      onClick={null}
      size="xlarge"
      src={null}
      theme={null}
      title="Jefe Guadelupe"
      type=""
    />
    <div
      className="md-alert__caller-title"
    >
      Jefe Guadelupe
    </div>
    <div
      className="md-alert__caller-subtitle"
    >
      +1 408-555-1212
    </div>
  </div>
  <Component>
    <DeviceListCall
      className=""
      defaultSelected={0}
      devices={
        Array [
          Object {
            "name": "SJC21-Babelfish",
            "type": "device",
            "value": "1010101",
          },
          Object {
            "name": "Use my computer",
            "value": "2020202",
          },
        ]
      }
      header="Device selection"
      onSelect={null}
    />
  </Component>
  <div
    className="md-alert--call--buttons"
  >
    <ContextTransform(Button)
      ariaLabel="reject call"
      circle={true}
      color="red"
      onClick={null}
      size={44}
    >
      <Icon
        append={false}
        ariaLabel={null}
        buttonClassName=""
        buttonProps={null}
        className=""
        color=""
        description=""
        name="cancel_24"
        onClick={null}
        prepend={false}
        size={null}
        sizeOverride={false}
        style={null}
        title=""
        type=""
      />
    </ContextTransform(Button)>
  </div>
</div>
`;
